--- a/coffee-hackaton-frontend/src/App.css
+++ b/coffee-hackaton-frontend/src/App.css
@@ -1,6 +1,13 @@
 #root {
   
 }
+.container {
+  border: 1px solid black;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .movement-pattern-form {
   display: flex;
